Fixed alignment issue with Study Screen Header

--- a/stylesheets/study_screen.css
+++ b/stylesheets/study_screen.css
@@ -23,8 +23,6 @@
     background-color: var(--card-background-color);
     border-radius: var(--card-border-radius);
     color: black;
-    width: var(--card-width);
-    justify-self: center;
 }
 
 #study-controls {
